--- a/PAGES/10g_simd_LoopVectorization/index.html
+++ b/PAGES/10g_simd_LoopVectorization/index.html
@@ -2794,8 +2794,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>So far, we&#39;ve been using the built-in macro <code>@simd</code> for applying SIMD instructions. This approach basically adds the possibility of SIMD, letting the compiler making the final decision about whether is worth incorporating it. The <code>@simd</code> macro only implements basic features of SIMD. Moreover, as a built-in function, it prioritizes code safety over performance. </p>
-<p>Next, we consider the macro <code>@turbo</code> from the package <code>LoopVectorization</code>. This implements SIMD optimizations more aggressively relative to <code>@simd</code>. Furthermore, it allows us to apply SIMD in both for-loops and broadcasting operations. </p>
+<p>So far, we&#39;ve been using the built-in macro <code>@simd</code> to apply SIMD instructions. This approach merely suggests the potential advantages of SIMD, leaving the final decision on its implementation to the compiler. Moreover, the <code>@simd</code> macro only implements basic features of SIMD, and prioritizes code safety over performance. </p>
+<p>Next, we consider the macro <code>@turbo</code> from the package <code>LoopVectorization</code>. This macro consistently implements SIMD optimizations when invoked, and applies more aggressive optimizations compared to <code>@simd</code>. Additionally, unlike <code>@simd</code>, <code>@turbo</code> can be utilized in both for-loops and broadcasting operations.</p>
 <p>      </div>
     </div>
   </div>
@@ -2809,7 +2809,7 @@ color: white;
 <ul>
 <li><p><code>@turbo</code> never checks index bounds </p>
 </li>
-<li><p><code>@turbo</code> may provide wrong results if iterations depend on a specific execution order &#40;except for reductions&#41;.</p>
+<li><p><code>@turbo</code> may provide wrong results if the outcome depends on a specific execution order of the iterations &#40;except for reductions&#41;.</p>
 </li>
 </ul>
 <p>Regarding the latter, computing a vector with cumulative sums of a vector will return incorrect results. This can be observed below, where we check the resulting vector by summing all its values.</p>
@@ -3329,7 +3329,7 @@ foo&#40;x&#41; &#61; @turbo calculation.&#40;x&#41;</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 20, 2025 
+          © Martin Alfaro <br>Last Modified February 25, 2025 
       </span> 
   </div> 
 </footer>
