--- a/PAGES/11b_multithread_intro/index.html
+++ b/PAGES/11b_multithread_intro/index.html
@@ -2900,10 +2900,21 @@ B &#61; @task job_B&#40;1&#41;      # B&#39;s task takes 1 second</code></pre> <
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Sequential </button>
-    <button class="tablink" data-id=""> Concurrent </button>
-    <button class="tablink" data-id=""> Sequential (Julia's Default Procedure) </button>
+    <button class="tablink first_tab active" data-id=""> Sequential (Julia's Default Procedure)  </button>
+    <button class="tablink" data-id=""> Sequential </button>
+    <button class="tablink" data-id=""> Concurrent </button>    
 </div><div data-id="" class="tabcontent active">
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">A &#61; job_A&#40;2&#41;            # A&#39;s task takes 2 seconds
+B &#61; job_B&#40;1&#41;            # B&#39;s task takes 1 second</code></pre> </div></div> 
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/02a.gif" class="gif-wrapper" alt="gif" style="width:;">
+            <div class="play-overlay">
+              <button class="play-button">
+                <img src="/julia_book/assets/icons/play_button.png" alt="Play">
+              </button>        
+            </div>            
+          </div> </div> 
+ </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">A &#61; @task job_A&#40;2&#41;      # A&#39;s task takes 2 seconds
 B &#61; @task job_B&#40;1&#41;      # B&#39;s task takes 1 second
 
@@ -2924,17 +2935,6 @@ B &#61; @task job_B&#40;1&#41;      # B&#39;s task takes 1 second
 &#40;schedule&#40;A&#41;, schedule&#40;B&#41;&#41; .|&gt; wait</code></pre> </div></div> 
 <div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
             <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/02b.gif" class="gif-wrapper" alt="gif" style="width:;">
-            <div class="play-overlay">
-              <button class="play-button">
-                <img src="/julia_book/assets/icons/play_button.png" alt="Play">
-              </button>        
-            </div>            
-          </div> </div> 
- </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">A &#61; job_A&#40;2&#41;            # A&#39;s task takes 2 seconds
-B &#61; job_B&#40;1&#41;            # B&#39;s task takes 1 second</code></pre> </div></div> 
-<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/02a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
@@ -3042,7 +3042,7 @@ end</code></pre> </div></div>
     &#40;schedule&#40;A&#41;, schedule&#40;B&#41;&#41; .|&gt; wait
 end</code></pre> </div></div> 
 <div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204a.gif" class="gif-wrapper" alt="gif" style="width:;">
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204c.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
@@ -3079,7 +3079,7 @@ end</code></pre> </div></div>
     &#40;A,B&#41; .|&gt; wait
 end</code></pre> </div></div> 
 <div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204a.gif" class="gif-wrapper" alt="gif" style="width:;">
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204c.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
@@ -3223,7 +3223,7 @@ println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 20, 2025 
+          © Martin Alfaro <br>Last Modified February 25, 2025 
       </span> 
   </div> 
 </footer>
